# a_maze_ing

./: .gitignore  Makefile  README.md  TEST_REPORT.md  a_maze_ing.py  config.txt  config_test_imperfect.txt  config_test_small.txt  maze.txt  maze_imperfect.txt  maze_small.txt  pyproject.toml  requirements.txt  test_suite.sh
mazegen/: __init__.py  formatters.py  generator.py  solver.py  visualizer.py
mazegen/tests/: test_mazegen.py
